# binarysudoku

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  board.cpp  board.hpp  generate.cpp  generator.cpp  generator.hpp  main.cpp  note.md  solver.cpp  solver.hpp  util.hpp
combined/: combined_board.cpp  combined_board.hpp  combined_solver.cpp  combined_solver.hpp
problems/16x16/: allblank.txt  debug.txt  easy.txt  hard.txt  hoge.txt  minhints.txt  q1.txt  q2.txt  q3.txt  q4.txt  q5.txt  ton.txt  ton2.txt
problems/9x9/: HardestDatabase110626.txt  allblank.txt  cand.txt  convert.py  debug.txt  hardest.txt  hardestdatabase.txt  minhints.txt  q1.txt  q2.txt  q3.txt  q4.txt  temp.txt  test.txt
problems/9x9/combined/: cross1.txt  double1.txt  samurai1.txt  test1.txt  test2.txt  test3.txt  test4.txt
problems/adc2024/: hardestdatabase.txt  q1.txt  q2.txt  q3.txt  q4.txt  q5.txt  sample.txt
unittest/: adc2024.cpp  benchmark.cpp  combined.cpp  generate.cpp  solve.cpp
